--- a/Web/Bookworm.Web/Areas/Admin/Views/User/Index.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/User/Index.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Manage Users";
 }
 
-<h1 class="text-center">Users</h1>
+<h1 class="text-center mt-5">Users</h1>
 
 <div class="container-fluid">
     <div class="card shadow mb-4">
-        <div class="card-body">
-            <div class="table-responsive">
+        <div class="card-body bg-dark text-light">
+            <div class="table-responsive ">
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                     <thead>
                         <tr>
