--- a/Web/Bookworm.Web/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Views/Home/Index.cshtml
@@ -40,12 +40,12 @@
 {
     <section class="d-flex justify-content-evenly homeBtnsSection my-5">
         <div>
-            <a asp-controller="Book" asp-action="Upload" class="btn button btn-lg animate__animated animate__heartBeat">
+            <a asp-controller="Book" asp-action="Upload" class="btn button btn-lg animate__animated animate__pulse">
                 Upload Book
             </a>
         </div>
         <div>
-            <a asp-controller="Quote" asp-action="Add" class="btn button btn-lg animate__animated animate__heartBeat">
+            <a asp-controller="Quote" asp-action="Add" class="btn button btn-lg animate__animated animate__pulse">
                 Upload Quote
             </a>
         </div>
