--- a/Web/Bookworm.Web/Views/Quote/Edit.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/Edit.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Edit Quote";
 }
 
-@*<h2 class="text-center mt-4">Edit Quote</h2>*@
-
-<div class="d-flex justify-content-center mt-4">
+<div class="d-flex justify-content-center mt-5">
     <div class="card text-center title-card animate__animated animate__jackInTheBox">
         <div class="card-body">
             <h3>@this.ViewData["Title"]<i class="fas fa-pen icon ms-3"></i></h3>
@@ -14,30 +12,39 @@
     </div>
 </div>
 
-<form method="post" class="col-lg-8 offset-lg-2">
+<form method="post" class="col-6 mx-auto d-flex justify-content-center flex-column mt-3 mb-5">
     <div asp-validation-summary="All" class="text-danger"></div>
     <input type="hidden" asp-for="Id">
     <div class="form-group justify-content-center">
         <label asp-for="Content"><strong>Content*</strong></label>
-        <textarea asp-for="Content" class="form-control border border-2" rows="6"></textarea>
+        <textarea asp-for="Content" class="form-control border border-2 fs-5" rows="6"></textarea>
         <span asp-validation-for="Content" class="small text-danger"></span>
     </div>
-    <div class="form-group my-3">
-        <label asp-for="AuthorName"><strong>Author's Name</strong></label>
-        <input value=@(Model.AuthorName != null ? Model.AuthorName : "") asp-for="AuthorName" type="text" class="form-control border border-2">
-        <span asp-validation-for="AuthorName" class="small text-danger"></span>
-    </div>
-    <div class="form-group my-3">
-        <label asp-for="BookTitle"><strong>Book Title</strong></label>
-        <input asp-for="BookTitle" value="@(Model.BookTitle != null ? Model.BookTitle : "")" type="text" class="form-control border border-2">
-        <span asp-validation-for="BookTitle" class="small text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="MovieTitle"><strong>Movie Title</strong></label>
-        <input asp-for="MovieTitle" value=@(Model.MovieTitle != null ? Model.MovieTitle : "") type="text" class="form-control border border-2">
-        <span asp-validation-for="MovieTitle" class="small text-danger"></span>
-    </div>
-    <div class="text-center my-3">
-        <button type="submit" class="btn button text-center form-button fs-5"><strong>Edit Quote</strong></button>
+    @if (Model.AuthorName != null)
+    {
+        <div class="form-group my-3">
+            <label asp-for="AuthorName"><strong>Author's Name</strong></label>
+            <input value="@Model.AuthorName" asp-for="AuthorName" type="text" class="form-control border border-2 fs-5">
+            <span asp-validation-for="AuthorName" class="small text-danger"></span>
+        </div>
+    }
+    @if (Model.BookTitle != null)
+    {
+        <div class="form-group my-3">
+            <label asp-for="BookTitle"><strong>Book Title</strong></label>
+            <input asp-for="BookTitle" value="@Model.BookTitle" type="text" class="form-control border border-2 fs-5">
+            <span asp-validation-for="BookTitle" class="small text-danger"></span>
+        </div>
+    }
+    @if (Model.MovieTitle != null)
+    {
+        <div class="form-group my-3">
+            <label asp-for="MovieTitle"><strong>Movie Title</strong></label>
+            <input asp-for="MovieTitle" value="@Model.MovieTitle" type="text" class="form-control border border-2 fs-5">
+            <span asp-validation-for="MovieTitle" class="small text-danger"></span>
+        </div>
+    }
+    <div class="text-center mt-3">
+        <button type="submit" class="btn button text-center form-button fs-5 px-5"><strong>Edit</strong></button>
     </div>
 </form>
