--- a/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
@@ -7,14 +7,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Dashboard</title>
+    <title>Admin - Bookworm</title>
 
     <!-- Custom fonts for this template-->
     <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href="~/css/dataTables.bootstrap4.min.css" rel="stylesheet" asp-append-version="true">
     <!-- Custom styles for this template-->
-    <link href="~/css/sb-admin-2.min.css" rel="stylesheet" asp-append-version="true">
+    <link href="~/css/sb-admin-2.css" rel="stylesheet" asp-append-version="true">
 </head>
 
 <body id="page-top">
@@ -92,10 +92,10 @@
     </div>
     <!-- End of Main Content -->
     <!-- Footer -->
-    <footer class="sticky-footer bg-dark" style="color:white">
+    <footer class="sticky-footer bg-dark text-light">
         <div class="container my-auto">
             <div class="copyright text-center my-auto">
-                <span>Copyright &copy; Bookworm @DateTime.UtcNow.Year</span>
+                <span class="fs-1">Copyright &copy; Bookworm @DateTime.UtcNow.Year</span>
             </div>
         </div>
     </footer>
