--- a/Web/Bookworm.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -5,12 +5,12 @@
 
 <h1 class="text-center mt-5">Welcome to Admin Area!</h1>
 
-<div class="row mt-5">
+<div class="row mt-5 justify-content-center">
     <div class="card border-left-primary shadow h-100 py-2">
         <div class="card-body">
-            <div class="row no-gutters align-items-center">
+            <div class="row align-items-center">
                 <div class="col mr-2">
-                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                    <div class=" font-weight-bold text-primary text-uppercase mb-1">
                         Pending Book Requests
                     </div>
                     <div class="h5 mb-0 font-weight-bold text-gray-800">@unapprovedBooksCount</div>
@@ -23,9 +23,9 @@
     </div>
     <div class="card border-left-primary shadow h-100 py-2">
         <div class="card-body">
-            <div class="row no-gutters align-items-center">
+            <div class="row align-items-center">
                 <div class="col mr-2">
-                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                    <div class=" font-weight-bold text-primary text-uppercase mb-1">
                         Pending Quotes Requests
                     </div>
                     <div class="h5 mb-0 font-weight-bold text-gray-800">@unapprovedQuotesCount</div>
