--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Access denied";
 }
 
-<header>
+<header class="text-center mt-5 animate__animated animate__pulse fs-2">
     <h1 class="text-danger">@ViewData["Title"]</h1>
     <p class="text-danger">You do not have access to this resource.</p>
 </header>
