--- a/Web/Bookworm.Web/Views/Book/Random.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Random.cshtml
@@ -15,10 +15,10 @@
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group fs-4 mt-4">
         <label asp-for="CategoryName">Select Category</label>
-        <select asp-for="CategoryName" asp-items="@Model.Categories" size="8" aria-label="size 5 select example" class="form-select form-control fs-5"></select>
+        <select asp-for="CategoryName" asp-items="@Model.Categories" size="8" aria-label="size 5 select example" class="form-select form-control border border-2 fs-5"></select>
     </div>
     <div class="form-group mt-4">
-        <label class="fs-4" asp-for="@Model.CountBooks">Select Numbet of books:</label>
+        <label class="fs-4" asp-for="@Model.CountBooks">Select Number of books:</label>
         <br>
         <div class="d-flex align-items-center">
             <input asp-for="@Model.CountBooks" id="five" type="radio" name="CountBooks" value=5>
