--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -8,5 +8,7 @@
 @using Bookworm.Web.ViewModels.Comments
 @using Bookworm.Web.ViewModels.Quizzes
 @using Bookworm.Web.ViewModels.Users
+@using Bookworm.Web.ViewModels.Quotes.UploadQuoteViewModels;
+@using Bookworm.Common.Enums;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Bookworm.Web
