--- a/Web/Bookworm.Web/wwwroot/css/sb-admin-2.css
+++ b/Web/Bookworm.Web/wwwroot/css/sb-admin-2.css
@@ -12215,7 +12215,7 @@ footer.sticky-footer {
 
     footer.sticky-footer .copyright {
         line-height: 1;
-        font-size: 0.8rem;
+        /*font-size: 0.8rem;*/
     }
 
 body.sidebar-toggled footer.sticky-footer {
