Make change to authors.js

--- a/Web/Bookworm.Web/Views/Book/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Upload.cshtml
@@ -53,7 +53,7 @@
 
     <div class="form-group mt-4" id="authorsContainer">
         <div id="alert-message"></div>
-        <button type="button" id="addAuthorBtn" class="btn button" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="You can add 5 authors" onclick="AddAuthor();">Add Author<i class="fas fa-user ms-1"></i></button>
+        <button type="button" id="addAuthorBtn" class="btn button fs-5" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="You can add 5 authors" onclick="AddAuthor();">Add Author<i class="fa-solid fa-square-plus ms-2 fa-xl"></i></button>
     </div>
 
     <div class="form-group mt-4 fs-4">
