--- a/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
@@ -103,7 +103,7 @@ else
                             }
                         </td>
                         <td class="text-center align-middle">
-                            <a asp-area="" asp-action="Edit" asp-controller="Quote" asp-route-id="@Model.Quotes[i].Id" class="btn btn-outline-warning">Edit</a>
+                            <a asp-area="" asp-action="Edit" asp-controller="Quote" asp-route-id="@Model.Quotes[i].Id" class="btn btn-outline-warning"><i class="fa-solid fa-pen-to-square fa-xl"></i></a>
                         </td>
                         <td class="text-center align-middle">
                             <a asp-area="" asp-action="Delete" asp-controller="Quote" asp-route-id="@Model.Quotes[i].Id" class="btn btn-outline-danger"><i class="fa-solid fa-trash-can fa-xl"></i></a>
@@ -114,6 +114,8 @@ else
         </table>
     </div>
 }
+
+
 
 
 @section Scripts{
